[gd_scene load_steps=3 format=3 uid="uid://b20hbfrlj35qe"]

[ext_resource type="Script" path="res://backend/door_to_level.gd" id="1_len7k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_64jnk"]
size = Vector3(10, 6, 2)

[node name="door_to_level" type="Area3D"]
script = ExtResource("1_len7k")

[node name="col_loader" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1)
shape = SubResource("BoxShape3D_64jnk")

[node name="col_door" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -1)
shape = SubResource("BoxShape3D_64jnk")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
